overflow no longer hidden

--- a/main.css
+++ b/main.css
@@ -10,7 +10,6 @@ body {
   margin: 0;
 
   min-height: 100%;
-  overflow: hidden;
 
   width: 100%;
   height: 100%;
